Initial customization commit

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,181 @@
----
----
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@article{jin2016categorical,
+  title={Categorical spectral analysis of periodicity in nucleosomal DNA},
+  author={Jin, Hu and Rube, H Tomas and Song, Jun S},
+  journal={Nucleic acids research},
+  volume={44},
+  number={5},
+  pages={2047--2057},
+  year={2016},
+  publisher={Oxford University Press}
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{bulut2016inhibition,
+  title={Inhibition of mTOR induces a paused pluripotent state.},
+  author={Bulut-Karslioglu, Aydan and Biechele, Steffen and Jin, Hu and Macrae, Trisha A and Hejna, Miroslav and Gertsenstein, Marina and Song, Jun S and Ramalho-Santos, Miguel},
+  journal={Nature},
+  volume={540},
+  number={7631},
+  pages={119--123},
+  year={2016}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@article{frampton2017manganin,
+  title={Manganin Foil Sensor for Small Uniaxial Stress},
+  author={Frampton, Miles and McLaughlin, Nathan and Jin, Hu and Zieve, Rena},
+  journal={Review of Scientific Instruments},
+  volume={88},
+  number={4},
+  pages={046106},
+  year={2017},
+  publisher={AIP}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
+@article{ye2017nf45,
+  title={NF45 and NF90/NF110 coordinately regulate ESC pluripotency and differentiation},
+  author={Ye, Julia and Jin, Hu and Pankov, Aleksandr and Song, Jun S and Blelloch, Robert},
+  journal={RNA},
+  volume={23},
   number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+  pages={1270--1284},
+  year={2017},
+  publisher={Cold Spring Harbor Lab}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
+@article{jin2018unified,
+  title={A unified computational framework for modeling genome-wide nucleosome landscape},
+  author={Jin, Hu and Finnegan, Alex I and Song, Jun S},
+  journal={Physical biology},
+  volume={15},
   number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+  pages={066011},
+  year={2018},
+  publisher={IOP Publishing}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@article{finnegan2020epigenetic,
+  title={Epigenetic engineering of yeast reveals dynamic molecular adaptation to methylation stress and genetic modulators of specific DNMT3 family members},
+  author={Finnegan, Alex I and Kim, Somang and Jin, Hu and Gapinske, Michael and Woods, Wendy S and Perez-Pinera, Pablo and Song, Jun S},
+  journal={Nucleic Acids Research},
+  volume={48},
+  number={8},
+  pages={4081--4099},
+  year={2020},
+  publisher={Oxford University Press}
+}
+
+@article{bulut2021chd1,
+  title={Chd1 protects genome integrity at promoters to sustain hypertranscription in embryonic stem cells},
+  author={Bulut-Karslioglu, Aydan and Jin, Hu and Kim, Yun-Kyo and Cho, Brandon and Guzman-Ayala, Marcela and Williamson, Andrew JK and Hejna, Miroslav and St{\"o}tzel, Maximilian and Whetton, Anthony D and Song, Jun S and others},
+  journal={Nature communications},
+  volume={12},
+  number={1},
+  pages={4859},
+  year={2021},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{jin2024accurate,
+  title={Accurate and sensitive mutational signature analysis with MuSiCal},
+  author={Jin, Hu and Gulhan, Doga C and Geiger, Benedikt and Ben-Isvy, Daniel and Geng, David and Ljungstr{\"o}m, Viktor and Park, Peter J},
+  journal={Nature Genetics},
+  volume={56},
+  number={3},
+  pages={541--552},
+  year={2024},
+  publisher={Nature Publishing Group US New York}
+}
+
+@article{luquette2022single,
+  title={Single-cell genome sequencing of human neurons identifies somatic point mutation and indel enrichment in regulatory elements},
+  author={Luquette, Lovelace J and Miller, Michael B and Zhou, Zinan and Bohrson, Craig L and Zhao, Yifan and Jin, Hu and Gulhan, Doga and Ganz, Javier and Bizzotto, Sara and Kirkham, Samantha and others},
+  journal={Nature Genetics},
+  volume={54},
+  number={10},
+  pages={1564--1571},
+  year={2022},
+  publisher={Nature Publishing Group US New York}
+}
+
+@article{ganz2023contrasting,
+  title={Contrasting patterns of somatic mutations in neurons and glia reveal differential predisposition to disease in the aging human brain},
+  author={Ganz, Javier and Luquette, Lovelace J and Bizzotto, Sara and Bohrson, Craig and Jin, Hu and Miller, Michael B and Zhou, Zinan and Galor, Alon and Park, Peter J and Walsh, Christopher A},
+  journal={bioRxiv},
+  pages={2023--01},
+  year={2023},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
+@article{lee2023eralpha,
+  title={ER$\alpha$-associated translocations underlie oncogene amplifications in breast cancer},
+  author={Lee, Jake June-Koo and Jung, Youngsook Lucy and Cheong, Taek-Chin and Espejo Valle-Inclan, Jose and Chu, Chong and Gulhan, Doga C and Ljungstr{\"o}m, Viktor and Jin, Hu and Viswanadham, Vinayak V and Watson, Emma V and others},
+  journal={Nature},
+  volume={618},
+  number={7967},
+  pages={1024--1032},
+  year={2023},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{chu2023landscape,
+  title={The landscape of human SVA retrotransposons},
+  author={Chu, Chong and Lin, Eric W and Tran, Antuan and Jin, Hu and Ho, Natalie I and Veit, Alexander and Cortes-Ciriano, Isidro and Burns, Kathleen H and Ting, David T and Park, Peter J},
+  journal={Nucleic Acids Research},
+  volume={51},
+  number={21},
+  pages={11453--11465},
+  year={2023},
+  publisher={Oxford University Press}
+}
+
+@article{raven2023hepatocyte,
+  title={Hepatocyte identity and zonal position determine tumourigenic potential of mutant $\beta$-catenin},
+  author={Raven, Alexander and Gilroy, Kathryn and Jin, Hu and Leslie, Holly and Hall, Holly and Ridgway, Rachel and Ford, Catriona and Gulhan, Doga and Vlahov, Nikola and Mills, Megan and others},
+  year={2023}
+}
+
+@article{gulhan2024predicting,
+  title={Predicting response to immune checkpoint blockade therapy among mismatch repair-deficient patients using mutational signatures},
+  author={Gulhan, Doga C and Viswanadham, Vinay and Muyas, Francesc and Jin, Hu and Foote, Michael B and Lee, Jake June-Koo and Barras, David and Ljungstrom, Viktor and Jung, Youngsook L and Rousseau, Benoit C and others},
+  journal={medRxiv},
+  pages={2024--01},
+  year={2024},
+  publisher={Cold Spring Harbor Laboratory Press}
+}
+
+@article{ganz2024contrasting,
+  title={Contrasting somatic mutation patterns in aging human neurons and oligodendrocytes},
+  author={Ganz, Javier and Luquette, Lovelace J and Bizzotto, Sara and Miller, Michael B and Zhou, Zinan and Bohrson, Craig L and Jin, Hu and Tran, Antuan V and Viswanadham, Vinayak V and McDonough, Gannon and others},
+  journal={Cell},
+  volume={187},
+  number={8},
+  pages={1955--1970},
+  year={2024},
+  publisher={Elsevier}
+}
+
+@phdthesis{jin2018statistical,
+  title={Statistical analysis and modeling of nucleosome positioning},
+  author={Jin, Hu},
+  year={2018},
+  school={University of Illinois at Urbana-Champaign}
+}
+
+@article{chu2024contribution,
+  title={Contribution of de novo retroelements to birth defects and childhood cancers},
+  author={Chu, Chong and Ljungstrom, Viktor and Tran, Antuan and Jin, Hu and Park, Peter J},
+  journal={medRxiv},
+  pages={2024--04},
+  year={2024},
+  publisher={Cold Spring Harbor Laboratory Press}
+}
+
+@article{kim2024recent,
+  title={Recent Advances in Genomic Approaches for the Detection of Homologous Recombination Deficiency},
+  author={Kim, Yoo-Na and Gulhan, Doga C and Jin, Hu and Glodzik, Dominik and Park, Peter J},
+  journal={Cancer Research and Treatment: Official Journal of Korean Cancer Association},
+  volume={56},
+  number={4},
+  pages={975--990},
+  year={2024},
+  publisher={Korean Cancer Association}
 }
